# Rinux

./: Cargo.toml  README.md
booter/: Cargo.toml  build.rs  limine.cfg
booter/src/: args.rs  command.rs  lib.rs  main.rs
kernel/: Cargo.toml  build.rs
kernel/.cargo/: config.toml
kernel/src/: bit_manipulation.rs  boot_info.rs  framebuffer.rs  log.rs  logger.rs  main.rs  ps2.rs  serial.rs
kernel/src/acpi/: mod.rs  rsdp.rs
kernel/src/acpi/sdt/: apic.rs  fadt.rs  mod.rs  rsdt.rs  tables.rs
kernel/src/interrupts/: exceptions.rs  hardware.rs  idt.rs
kernel/src/memory/: allocator.rs  frame_allocator.rs  handler.rs  mod.rs
kernel/src/memory/allocator/: mod.rs
kernel/src/task/: executor.rs  keyboard.rs
