cargo-features = ["per-package-target"]
[package]
name = "kernel"
version = "0.1.0"
edition = "2021"
forced-target = "x86_64-unknown-none"  # Useless cuz overriden in build script
default-target = "x86_64-unknown-none"

[dependencies]
limine = "0.2.0"
noto-sans-mono-bitmap = "0.2.0"
spin = "0.9.8"
log = { version = "0.4.20", default-features = false }
x86_64 = "*"
lazy_static = {version="1.4.0", features = ["spin_no_std"]}
raw-cpuid = "11.0.1"
pic8259 = "0.10.4"
pc-keyboard = "0.7.0"
linked_list_allocator = "0.10.5"

[[bin]]
name = "kernel"
